[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/SelectableArea.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://scripts/selection_indicator.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 9 )

[node name="position" type="Area2D"]
position = Vector2( 34.7446, 31.0527 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.4, 1.4 )
shape = SubResource( 1 )

[node name="x_or_o" type="Sprite" parent="."]

[node name="selection_indicator" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -5 )
script = ExtResource( 3 )
[connection signal="input_event" from="." to="." method="_on_position_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_position_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_position_mouse_exited"]
